# microservices-patterns-lab

./: .gitignore  Makefile  README.md
gateway/: nginx.conf
infra/: Makefile  infrastructure.yml
infra/gateway/conf.d/: default.conf
patterns/: pyproject.toml
patterns/src/patterns/: __init__.py
patterns/src/patterns/messaging/: connection.py  publisher.py  subscriber.py
services/customer_service/: Dockerfile  README.md  main.py  pyproject.toml  test_rabbit.py
services/order_service/: Dockerfile  main.py  pyproject.toml
