[project]
name = "patterns"
version = "0.1.0"
description = "Reusable integration and messaging patterns for services"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patterns"]

[tool.hatch.metadata]
allow-direct-references = true
