[project]
name = "customer-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.7",
    "fastapi[standard]>=0.116.1",
    "patterns",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]

[tool.uv.sources]
patterns = { path = "../../patterns", editable = true }
